# draconisplusplus

./: .gitignore  CONTRIBUTING.md  config.example.hpp  flake.nix  meson.build  meson.options  vcpkg.json
examples/: meson.build
examples/glaze_http/: main.cpp
examples/mcp_server/: main.cpp
examples/vulkan_app/: main.cpp
include/Drac++/Config/: PrecompiledLayout.hpp  PrecompiledPlugins.hpp
include/Drac++/Core/: Plugin.hpp  PluginManager.hpp  StaticPlugins.hpp  System.hpp
include/Drac++/Services/: Packages.hpp  Weather.hpp
include/Drac++/Utils/: ArgumentParser.hpp  CacheManager.hpp  DataTypes.hpp  Env.hpp  Error.hpp  Localization.hpp  Logging.hpp  TranslationData.hpp  Types.hpp
nix/: boost-ut.nix  default.nix  module.nix  musl.nix  package.nix
plugins/: meson.build
plugins/json_format/: json_format.cpp  meson.build  plugin.json
plugins/markdown_format/: markdown_format.cpp  plugin.json
plugins/now_playing/: now_playing.cpp  plugin.json
plugins/weather/: WeatherConfig.hpp  config.hpp  meson.build  plugin.json  weather.cpp
plugins/windows_info/: meson.build  windows_info.cpp
plugins/yaml_format/: plugin.json  yaml_format.cpp
src/CLI/: CLI.cpp  CLI.hpp  main.cpp  meson.build
src/CLI/Config/: Config.cpp  Config.hpp
src/CLI/Core/: SystemInfo.cpp  SystemInfo.hpp
src/CLI/UI/: AsciiArt.hpp  UI.cpp  UI.hpp
src/Lib/: meson.build
src/Lib/Core/: PluginManager.cpp  StaticPlugins.cpp
src/Lib/OS/: BSD.cpp  Haiku.cpp  Linux.cpp  Serenity.cpp  Unix.hpp  Windows.cpp  macOS.cpp
src/Lib/OS/macOS/: Bridge.hpp  Bridge.mm
src/Lib/Services/: Packages.cpp
src/Lib/Services/Weather/: DataTransferObjects.hpp  MetNoService.cpp  OpenMeteoService.cpp  OpenWeatherMapService.cpp  WeatherFactory.cpp  WeatherUtils.hpp
src/Lib/Tests/: CacheManagerTest.cpp  LoggingUtilsTest.cpp  meson.build
src/Lib/Wrappers/: Curl.hpp  DBus.hpp  Wayland.hpp  XCB.hpp
subprojects/: glaze.wrap  ut.wrap
tests/: meson.build
